--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,12 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.BudgetBuddy" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@android:color/black</item>
+        <item name="colorPrimaryVariant">@android:color/darker_gray</item>
+        <item name="colorSecondary">@android:color/darker_gray</item>
+        <item name="colorSecondaryVariant">#A9A9A9</item>
+        <!-- Optional: Adjust other colors like text color if needed -->
+        <!-- <item name="android:textColorPrimary">@android:color/black</item> -->
     </style>
 
     <style name="Theme.BudgetBuddy" parent="Base.Theme.BudgetBuddy" />
