Add comments, colors, string and work on screens

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -7,6 +7,7 @@
     android:padding="16dp"
     tools:context=".ui.fragment.ChangePasswordFragment">
 
+    <!-- Screen title -->
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
@@ -16,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Current password input field -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/oldPasswordInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -36,6 +38,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- New password input field -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/newPasswordInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -56,6 +59,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Confirm new password input field -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/confirmPasswordInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -76,6 +80,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Button to save the new password -->
     <Button
         android:id="@+id/saveButton"
         android:layout_width="0dp"
