--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,36 +20,22 @@
             android:textAppearance="?attr/textAppearanceHeadline6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/notificationsButton"
+            app:layout_constraintBottom_toBottomOf="@+id/settingsButton"
+            app:layout_constraintEnd_toStartOf="@+id/settingsButton"
             android:layout_marginEnd="16dp"
             tools:text="Hi, Alex" />
 
         <ImageButton
-            android:id="@+id/helpButton"
+            android:id="@+id/settingsButton"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_help"
-            android:contentDescription="@string/help_button_desc"
-            app:tint="?attr/colorControlNormal" 
+            android:src="@drawable/ic_settings"
+            android:contentDescription="@string/settings"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/greetingTextView"/>
-
-        <ImageButton
-            android:id="@+id/notificationsButton"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_notifications"
-            android:contentDescription="@string/notifications_button_desc"
-            app:tint="?attr/colorControlNormal" 
-            app:layout_constraintEnd_toStartOf="@id/helpButton"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/greetingTextView"/>
-
 
         <!-- Balance Section -->
         <com.google.android.material.card.MaterialCardView
