--- a/app/src/main/res/layout/fragment_rewards.xml
+++ b/app/src/main/res/layout/fragment_rewards.xml
@@ -50,12 +50,12 @@
 
         <ImageButton
             android:id="@+id/shareButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/ic_help"
+            android:layout_width="78dp"
+            android:layout_height="78dp"
+            android:src="@drawable/ic_share"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/share_rewards"
-            android:padding="8dp"
+            android:padding="4dp"
             android:scaleType="centerInside"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
