--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -7,15 +7,31 @@
     android:padding="16dp"
     tools:context=".ui.fragment.ChangePasswordFragment">
 
+    <!-- Header Section -->
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back_button_desc"
+        app:layout_constraintTop_toTopOf="@id/titleTextView"
+        app:layout_constraintBottom_toBottomOf="@id/titleTextView"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Change Password"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        android:gravity="center_horizontal"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="8dp" />
 
+    <!-- Password Input Fields -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/oldPasswordInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -76,6 +92,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Action Button -->
     <Button
         android:id="@+id/saveButton"
         android:layout_width="0dp"
